<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Etiqueta y sus atributos-->
    <!--<ImageView-->
    <!--android:id="@+id/imageView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginStart="0dp"-->
    <!--android:layout_marginTop="0dp"-->
    <!--android:scaleType="center"-->
    <!--app:srcCompat="@drawable/navidad" />-->
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/navidad" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mensaje1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="0dp"
        android:text="@string/mensaje1"
        android:textAlignment="center"
        android:textColor="@color/mensaje"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mensaje2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="0dp"
        android:text="@string/mensaje2"
        android:textAlignment="center"
        android:textColor="@color/mensaje"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mensaje3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="0dp"
        android:text="@string/mensaje3"
        android:textAlignment="center"
        android:textColor="@color/mensaje"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="cursive"
        android:text="@string/firma"
        android:textAlignment="center"
        android:textColor="@color/bea"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>